Fix vertical alignment

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@ html.dark {
 html,
 body,
 .container {
-  height: 95%;
+  height: 99%;
 }
 
 a {
